--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "paypal/merchant-sdk-php",
-    "description": "PayPal Merchant SDK for PHP",
+    "name": "wprelay/merchant-sdk-php",
+    "description": "WPRelay PayPal Merchant SDK for PHP",
     "keywords": ["paypal", "php", "sdk"],
     "homepage": "https://developer.paypal.com",
     "license": "Apache-2.0",
