--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=5.3.0",
         "ext-curl": "*",
-        "wprelay/rest-api-sdk-php":"dev-master"
+        "wprelay/sdk-core-php":"dev-master"
     },
     "repositories": [
         {
