--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "ext-curl": "*",
-        "wprelay/sdk-core-php":"dev-master"
+        "ext-curl": "*"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url":  "git@github.com:wprelay/sdk-core-php.git"
-        }
-    ],
     "autoload": {
         "psr-0": {
             "PayPal\\Service": "lib/",
